[package]
name = "cli_news"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = "Simpli CLI for fetching from newsapi"
license = "MIT"
authors = ["Pulko"]

[dependencies]
colour = "0.7.0"
crossterm = "0.27.0"
dotenv = "0.15.0"
newsapi = { path = "./newsapi"}
termimad = "0.29.1"
