[package]
name = "newsapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.9.6", features = ["json"] }
serde_json = "1.0.115"
serde =  { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
url = "2.5.0"
reqwest = { version = "0.12.2", features = ["json"] }

[features]
async = []
